--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>HTML London trip</title>
 </head>
 <body>
+    <h1>Il mio Viaggio a Londra</h1>ù
+    <!--immagini di londra-->
+    <div>
+        <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="immagine londra1">
+        <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="immagine londra2">
+        <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="immagine londra3">
+    </div>
+    <hr>
+
     
 </body>
 </html>
