--- a/index.html
+++ b/index.html
@@ -6,13 +6,83 @@
     <title>HTML London trip</title>
 </head>
 <body>
-    <h1>Il mio Viaggio a Londra</h1>ù
+    <h1>Il mio Viaggio a Londra</h1>
     <!--immagini di londra-->
     <div>
         <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="immagine londra1">
         <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="immagine londra2">
         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="immagine londra3">
     </div>
+    <hr>
+
+    <!--sezione spese-->
+    <h2>Le mie spese</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Numero</th>
+                <th>Descrizione</th>
+                <th>Costo</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120&#8364</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120&#8364</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120&#8364</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <td colspan="2">Totale</td>
+            <td>360&#8364</td>
+        </tfoot>
+    </table>
+    <hr>
+
+    <!--sezione cose da fare-->
+    <h3>Cose da fare</h3>
+        <ul>
+            <li>Visitare la Tower of London &cross;</li>
+            <li>Visitare greenwich &#10003</li>
+            <li>Ascoltare un artista di strada a Covent Garden &#10003</li>
+            <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+        </ul>
+    <hr>
+                
+    <!--sezione info utili-->
+    <h3>Info utili:</h3>
+    <ol>
+        <li>Numeri utili di emergenza
+            <ul>
+                <li><strong>999</strong> - Emergenza</li>
+                <li><strong>101</strong> - Numero polizia</li>
+                <li><strong>111</strong> - Numero assistenza medica</li>
+            </ul>
+        </li>
+        <li>Hotel 
+            <ul>
+                <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+                <li><strong>Indirizzo hotel</strong>: Westminster, London SW1A 1AA, Regno Unito</li>
+            </ul>
+        </li>
+        <li>Aereo 
+            <ul>
+                <li><strong>Volo di Andata</strong>: Y1234X, ore 9.30 da Milano Malpensa</li>
+                <li><strong>Volo di Ritorno</strong>: Y1236X, ore 18.30 da London Heathrow</li>
+            </ul>
+        </li>
+    </ol>        
     <hr>
 
     
