--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
         </li>
     </ol>        
     <hr>
-
-    
+    <!--sezione foto in fondo alla pagina-->
+    <h3>Le foto</h3>
+     <div>   
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="foto ponte di londra sul canale">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="foto Tower Bridge">
+    </div> 
 </body>
 </html>
