aggiunti icona e meta

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Matteo Cancilleri">
+    <meta name="description" content="Viaggio a Londra e le eventuali spese">
     <title>HTML London trip</title>
+    <link rel="icon" href="./img/83659421-icona-della-destinazione-di-londra-il-tower-bridge-è-uno-dei-famosi-monumenti-architettonici-e.jpg" type="image/jpg">
 </head>
+
 <body>
     <h1>Il mio Viaggio a Londra</h1>
     <!--immagini di londra-->
