--- a/index.html
+++ b/index.html
@@ -34,22 +34,24 @@
             <tr>
                 <td>1</td>
                 <td>Biglietto Aereo</td>
-                <td>120&#8364</td>
+                <td>120&#8364;</td>
             </tr>
             <tr>
                 <td>1</td>
                 <td>Biglietto Aereo</td>
-                <td>120&#8364</td>
+                <td>120&#8364;</td>
             </tr>
             <tr>
                 <td>1</td>
                 <td>Biglietto Aereo</td>
-                <td>120&#8364</td>
+                <td>120&#8364;</td>
             </tr>
         </tbody>
         <tfoot>
-            <td colspan="2">Totale</td>
-            <td>360&#8364</td>
+            <tr>
+                <td colspan="2">Totale</td>
+                <td>360&#8364;</td>
+            </tr>
         </tfoot>
     </table>
     <hr>
@@ -58,8 +60,8 @@
     <h3>Cose da fare</h3>
         <ul>
             <li>Visitare la Tower of London &cross;</li>
-            <li>Visitare greenwich &#10003</li>
-            <li>Ascoltare un artista di strada a Covent Garden &#10003</li>
+            <li>Visitare greenwich &#10003;</li>
+            <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
             <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
         </ul>
     <hr>
